--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    background-color: #ffffff;
+    padding: 0;
+}
+body {
+    overflow: hidden;
+}
+
+canvas {
+    position:absolute;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left:0;
+    z-index: -1;
 }
 
 .wrapper {
@@ -27,6 +39,8 @@
     animation-duration: 3s;
     padding: 50px 50px 0;  
 }
+
+
 
 .logo__logo{
     display: flex;
@@ -222,7 +236,7 @@
     justify-content: flex-end;
     align-items: center;
     color: rgb(0, 0, 0);
-    background-color: #ffffff;
+    background-color: ;
     animation-delay: 1s;
     animation-duration: 3s;
     padding: 50px;
