--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ canvas {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    z-index:1;
+    position: relative;
 }
 
 .main-content {
