--- a/style.css
+++ b/style.css
@@ -79,11 +79,11 @@ canvas {
     text-decoration: none;
 }
 
-.logo__drummer {
+.logo__musician {
     color: transparent;
 }
 
-.logo__drummer:hover {
+.logo__musician:hover {
     color: orange;
 }
 
