--- a/style.css
+++ b/style.css
@@ -81,6 +81,11 @@ canvas {
 
 .logo__musician {
     color: transparent;
+    cursor: pointer;
+    -webkit-transition: color 2s ease-out;
+    -moz-transition: color 2s ease-out;
+    -o-transition: color 2s ease-out;
+    transition: color 2s ease-out;
 }
 
 .logo__musician:hover {
