commit on 'main'

--- a/style.css
+++ b/style.css
@@ -203,8 +203,7 @@ canvas {
     justify-content: center;
 }
 
-/* ------------------ JEFF'S FACE ------------------ */
-.jeff-container {
+.kenny-container {
     margin-top: 40vh;
     height: 40vh;
     width: 40vh;
