Added ul to index.html

--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,14 @@
+/* 
+Colors from coolors.co 
+
+CSS HSL 
+--maximum-yellow: hsla(59, 94%, 57%, 1);
+--gold-fusion: hsla(45, 16%, 39%, 1);
+--dodger-blue: hsla(206, 88%, 55%, 1); 
+--purple: rgba(175, 72, 193, 0.815)
+*/
+
+
 .about-wrapper {
     position: relative;
     top: 12em;
@@ -5,10 +16,23 @@
     height: 100%;
     background: rgba(175, 72, 193, 0.815);
     margin: auto;
-    z-index: 1; 
+    z-index: 1;
     border-radius: 70px;
-    
-    
+
+
+}
+
+.about-img {
+    position: relative;
+    display: block;
+    margin: auto;
+    width: 26em;
+    transform: rotate(-5deg);
+    /* Rotate image back to compensate for parent rotation */
+    z-index: 3;
+    border-radius: 10px;
+    border: 2px dashed rgba(255, 255, 255, 0.319);
+    top: 4em;
 }
 
 .about-img-bg {
@@ -21,39 +45,28 @@
 
     /* Credit to https://shadows.brumm.af/ for this layered box shadow  */
     box-shadow:
-  1.8px 1.7px 0.4px -10px rgba(0, 0, 0, 0.067),
-  4.2px 4px 0.9px -10px rgba(0, 0, 0, 0.097),
-  7.5px 7.3px 1.6px -10px rgba(0, 0, 0, 0.12),
-  12.5px 12px 2.7px -10px rgba(0, 0, 0, 0.14),
-  20.6px 19.8px 4.5px -10px rgba(0, 0, 0, 0.163),
-  36.1px 34.7px 7.9px -10px rgba(0, 0, 0, 0.193),
-  78px 75px 17px -10px rgba(0, 0, 0, 0.26)
-;
-    transform: rotate(5deg); /* Rotate shape 5 deg right */
+        1.8px 1.7px 0.4px -10px rgba(0, 0, 0, 0.067),
+        4.2px 4px 0.9px -10px rgba(0, 0, 0, 0.097),
+        7.5px 7.3px 1.6px -10px rgba(0, 0, 0, 0.12),
+        12.5px 12px 2.7px -10px rgba(0, 0, 0, 0.14),
+        20.6px 19.8px 4.5px -10px rgba(0, 0, 0, 0.163),
+        36.1px 34.7px 7.9px -10px rgba(0, 0, 0, 0.193),
+        78px 75px 17px -10px rgba(0, 0, 0, 0.26);
+    transform: rotate(5deg);
+    /* Rotate shape 5 deg right */
     z-index: 2;
 }
+
 .about-text-wrapper {
     width: 80vw;
+    height: 100%;
     margin: auto;
     position: relative;
-    display: block;
     top: 8em;
 }
 
 .about-text {
     color: white;
-    overflow-wrap: break-word; /* https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Text/Wrapping_Text */
-}
-
-.about-img {
-    position: relative;
-    display: block;
-    margin: auto;
-    width: 300px;
-    transform: rotate(-5deg); /* Rotate image back to compensate for parent rotation */
-    z-index: 3;
-    border-radius: 10px;
-    border: 2px dashed rgba(255, 255, 255, 0.319); 
-    top: 1em;
-    
+    overflow-wrap: break-word;
+    /* https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Text/Wrapping_Text */
 }
