--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,3 +1,13 @@
+/* 
+Colors from coolors.co 
+
+CSS HSL 
+--maximum-yellow: hsla(59, 94%, 57%, 1);
+--gold-fusion: hsla(45, 16%, 39%, 1);
+--dodger-blue: hsla(206, 88%, 55%, 1); 
+--purple: rgba(175, 72, 193, 0.815)
+*/
+
 .port-wrapper {
   position: relative;
   top: 12em;
@@ -5,7 +15,7 @@
   height: 100vh;
   background: rgba(199, 113, 214, 0.588);
   margin: auto;
-  z-index: 1; 
+  z-index: 1;
   border-radius: 70px;
 }
 
@@ -16,14 +26,13 @@
   width: 300px;
   z-index: 3;
   border-radius: 10px;
- /* Credit to https://shadows.brumm.af/ for this layered box shadow  */
-    box-shadow:
-  1.8px 1.7px 0.4px -10px rgba(0, 0, 0, 0.067),
-  4.2px 4px 0.9px -10px rgba(0, 0, 0, 0.097),
-  7.5px 7.3px 1.6px -10px rgba(0, 0, 0, 0.12),
-  12.5px 12px 2.7px -10px rgba(0, 0, 0, 0.14),
-  36.1px 24.7px 7.9px -10px rgba(0, 0, 0, 0.193)
-;
+  /* Credit to https://shadows.brumm.af/ for this layered box shadow  */
+  box-shadow:
+    1.8px 1.7px 0.4px -10px rgba(0, 0, 0, 0.067),
+    4.2px 4px 0.9px -10px rgba(0, 0, 0, 0.097),
+    7.5px 7.3px 1.6px -10px rgba(0, 0, 0, 0.12),
+    12.5px 12px 2.7px -10px rgba(0, 0, 0, 0.14),
+    36.1px 24.7px 7.9px -10px rgba(0, 0, 0, 0.193);
   top: 2em;
 }
 
@@ -33,7 +42,7 @@
 
 .port-text-wrapper {
   width: 80vw;
-  
+
   margin: auto;
   position: relative;
   display: block;
@@ -42,6 +51,6 @@
 
 .port-text {
   color: white;
-  overflow-wrap: break-word; /* https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Text/Wrapping_Text */
+  overflow-wrap: break-word;
+  /* https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Text/Wrapping_Text */
 }
-
