--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,14 @@ CSS HSL
 --maximum-yellow: hsla(59, 94%, 57%, 1);
 --gold-fusion: hsla(45, 16%, 39%, 1);
 --dodger-blue: hsla(206, 88%, 55%, 1); 
+--purple: rgba(175, 72, 193, 0.815)
 */
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
+
 }
 
 body {
@@ -19,7 +20,7 @@ body {
   min-height: 1000px;
   min-width: 375px;
   flex-direction: column;
-  background: hsla(206, 88%, 55%, 1);
+  background: rgb(30, 138, 216);
   font-family: 'Source Code Pro', monospace;
   color: hsla(59, 94%, 57%, 1);
 }
@@ -34,10 +35,10 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  
+
 }
 
-/* ----- HEADER ----- */
+/* ----- NAV HEADER ----- */
 
 header {
   height: 4em;
@@ -55,27 +56,29 @@ header {
 .main-nav a {
   text-decoration: none;
   padding: 10px;
+  display: block;
 }
 
 .main-nav li {
   flex: 1;
   list-style: none;
-  border-right: 0px solid hsla(59, 94%, 57%, 1);
+  border: 0px solid hsla(59, 94%, 57%, 1);
   padding: .5em 2em 0 .5em;
-  transition: all 1s ease-out;
+  transition: all .2s ease-out;
   height: 3em;
+  text-align: center;
+  justify-content: center;
 }
 
 .main-nav li:hover {
+  flex: 1;
   list-style: none;
-  border-right: 3px solid hsla(59, 94%, 57%, 1);
-
+  border: 3px solid rgba(175, 72, 193, 0.815);
+  border-top: none;
   padding: .5em 2em 0 .5em;
   transition: all .5s ease;
+  height: 3em;
 }
-
-
-
 
 
 /* ----- MAIN ----- */
@@ -86,20 +89,28 @@ main {
   height: 100%;
 }
 
-/* ----- LOGO -----*/
+/* ----- NAME LOGO -----*/
 
 .name-logo {
-  font-size: 2.3em;
+  min-width: 200px;
+  font-size: 3em;
   white-space: nowrap;
-  padding: .2em;
+  padding: .5em;
   display: flex;
-  position: absolute;
-  top: 0em;
+  position: relative;
+  top: 1em;
   margin: auto;
+  color: white;
   border-bottom: .7em groove hsla(59, 94%, 57%, 1);
   border-radius: .3em;
   transform: rotate(-6deg);
-  z-index: 100; 
+  z-index: 100;
+  transition: all .8s ease-out;
+}
+
+.name-logo:hover {
+  transition: all 1s ease;
+  border-bottom: .8em groove rgba(175, 72, 193, 0.815);
 }
 
 /* ----- COFFEE -----  */
@@ -108,18 +119,16 @@ main {
   width: 100%;
   position: relative;
   top: 4em;
-  min-width: 250px;
+  min-width: 30em;
+  min-height: 45em;
   padding-right: 4em;
 
-}
-
-.coffee-text {
-  color: white;
 }
 
 .coffee-text-container {
   position: relative;
   text-decoration: none;
+  text-align: center;
   height: 100%;
   width: 100%;
   margin: 4em;
@@ -135,6 +144,8 @@ main {
   justify-content: center;
 }
 
+
+
 .material-icons.md-48 {
   font-size: 30em;
   color: hsla(59, 94%, 57%, .1);
@@ -145,89 +156,26 @@ main {
 
 .material-icons.md-48:hover {
   margin: auto;
-  font-size: 33em;
+  font-size: 31em;
   color: hsla(59, 94%, 57%, 1);
   transition: all 1s ease;
 }
 
-.about-wrapper {
-    position: relative;
-    top: 12em;
-    width: 90vw;
-    height: 40em;
-    background: rgba(175, 72, 193, 0.815);
-    margin: auto;
-    z-index: 1; 
-    border-radius: 70px;
-    
-    
-}
-
-.about-img-bg {
-    height: 40vh;
-    width: 80vw;
-    margin-left: 1em;
-    border-radius: 40px;
-    background: rgba(201, 140, 220, 0.762);
-    /* background-image: linear-gradient(180deg, #ff9d7a 0, #ff8f83 10%, #ff8089 20%, #ff718d 30%, #ff628d 40%, #f25389 50%, #d34683 60%, #b63c7d 70%, #9e3678 80%, #883174 90%, #752e71 100%); */
-
-    /* Credit to https://shadows.brumm.af/ for this layered box shadow  */
-    box-shadow:
-  1.8px 1.7px 0.4px -10px rgba(0, 0, 0, 0.067),
-  4.2px 4px 0.9px -10px rgba(0, 0, 0, 0.097),
-  7.5px 7.3px 1.6px -10px rgba(0, 0, 0, 0.12),
-  12.5px 12px 2.7px -10px rgba(0, 0, 0, 0.14),
-  20.6px 19.8px 4.5px -10px rgba(0, 0, 0, 0.163),
-  36.1px 34.7px 7.9px -10px rgba(0, 0, 0, 0.193),
-  78px 75px 17px -10px rgba(0, 0, 0, 0.26)
-;
-    transform: rotate(5deg); /* Rotate shape 5 deg right */
-    z-index: 2;
-}
-.about-text-wrapper {
-    width: 80vw;
-    height: 20em;
-    margin: auto;
-    position: relative;
-    display: block;
-    top: 4em;
-}
-
-.about-text {
-    color: white;
-    overflow-wrap: break-word; /* https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Text/Wrapping_Text */
-}
-
-
-
-
-.about-img {
-    position: relative;
-    display: block;
-    margin: auto;
-    width: 300px;
-    transform: rotate(-5deg); /* Rotate image back to compensate for parent rotation */
-    z-index: 3;
-    border-radius: 10px;
-    border: 2px dashed white; 
-    top: 1em;
-    
-}
 
 /* ----- FOOTER ----- */
 
 footer {
-  
-  border-top: 1px solid white;
+  border-top: .7em groove hsla(59, 94%, 57%, 1);
   position: relative;
   justify-content: end;
-  margin-top: 15em;
-  height: 10em;
+  margin-bottom: 1em;
+  padding: 2em;
+  height: 3em;
   width: 100%;
- text-align: center;
- padding-top: 5em;
- bottom: 0;
- left: 0;
+  text-align: center;
+
+  bottom: 0;
+  left: 0;
 }
 
 /* ----- MEDIA RULES ----- */
@@ -237,20 +185,23 @@ footer {
     font-size: 15em;
     color: rgb(248, 245, 42);
   }
+
   .material-icons.md-48:hover {
     font-size: 18em;
     color: hsla(59, 94%, 57%, 1);
     transition: all 1s ease;
   }
+
   .horizontal.nav-list {
     display: block;
   }
+
   .coffee-container {
     width: 100%;
     position: relative;
     top: 10em;
   }
-  
+
   .name-logo {
     font-size: 1.5em;
     padding: .2em;
