--- a/css/about.css
+++ b/css/about.css
@@ -12,10 +12,8 @@ CSS HSL
 .about-wrapper {
     position: relative;
     top: 12em;
-    width: 90vw;
-    height: 100%;
+    min-width: 30em;
     background: rgba(175, 72, 193, 0.815);
-    margin: auto;
     z-index: 1;
     border-radius: 70px;
 
@@ -37,7 +35,7 @@ CSS HSL
 
 .about-img-bg {
     height: 40vh;
-    width: 80vw;
+    min-width: 80vw;
     margin-left: 1em;
     border-radius: 40px;
     background: rgba(201, 140, 220, 0.762);
