--- a/css/about.css
+++ b/css/about.css
@@ -26,8 +26,7 @@ CSS HSL
     display: block;
     margin: auto;
     width: 26em;
-    transform: rotate(-5deg);
-    /* Rotate image back to compensate for parent rotation */
+    transform: rotate(-5deg);/* Rotate image back to compensate for parent rotation */
     z-index: 3;
     border-radius: 10px;
     border: 2px dashed rgba(255, 255, 255, 0.319);
@@ -40,7 +39,6 @@ CSS HSL
     margin-left: 1em;
     border-radius: 40px;
     background: rgba(201, 140, 220, 0.762);
-    /* background-image: linear-gradient(180deg, #ff9d7a 0, #ff8f83 10%, #ff8089 20%, #ff718d 30%, #ff628d 40%, #f25389 50%, #d34683 60%, #b63c7d 70%, #9e3678 80%, #883174 90%, #752e71 100%); */
 
     /* Credit to https://shadows.brumm.af/ for this layered box shadow  */
     box-shadow:
@@ -51,8 +49,8 @@ CSS HSL
         20.6px 19.8px 4.5px -10px rgba(0, 0, 0, 0.163),
         36.1px 34.7px 7.9px -10px rgba(0, 0, 0, 0.193),
         78px 75px 17px -10px rgba(0, 0, 0, 0.26);
+        
     transform: rotate(5deg);
-    /* Rotate shape 5 deg right */
     z-index: 2;
 }
 
