--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -12,10 +12,9 @@ CSS HSL
   min-height: 700px;
   min-width: 280px;
   max-width: 500px;
-  top: 12em;
   background: rgba(199, 113, 214, 0.402);
   border: 1px solid rgb(199, 113, 214);
-  margin: 2em auto;
+  margin: 3em 0;
   z-index: 1;
   border-radius: 70px;
   padding: 1.5em;
@@ -45,10 +44,10 @@ CSS HSL
 }
 
 .port-text-wrapper {
-  width: 80vw;
+  
   flex-direction: row;
   margin: 1em;
-  display: block;
+  margin-top: 4em;
   top: 6em;
 }
 
@@ -56,5 +55,13 @@ CSS HSL
   color: white;
   overflow-wrap: break-word;
   /* https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Text/Wrapping_Text */
-}  
+}
 
+@media (max-width:500px) {
+  .port-wrapper {
+    margin-top: 5em;
+  }
+  .port-text-wrapper {
+    margin-top: 4em;
+  }
+}
