--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,11 @@ body {
   flex-direction: column;
   background: rgba(0, 129, 210, 0.925);
   font-family: 'Source Code Pro', monospace;
-  color: hsla(59, 94%, 57%, 1);
+  color: white;
 }
 
 body a {
-  color: hsla(59, 94%, 57%, 1);
+  color: white;
 }
 
 main {
