--- a/css/about.css
+++ b/css/about.css
@@ -10,36 +10,24 @@ CSS HSL
 
 
 .about-wrapper {
-    min-height: 500px;
-    min-width: 30em;
-    position: relative;
-    top: 2em;
-    background: rgba(175, 72, 193, 0.815);
+    min-height: 40em;
+    height: fit-content;
+    background: rgba(199, 113, 214, 0.402);
+    border: 1px solid rgb(199, 113, 214);
     z-index: 1;
-    border-radius: 70px;
+    border-radius: 7px;
 
 
-}
-
-.about-img {
-    position: relative;
-    display: block;
-    margin: auto;
-    width: 26em;
-    transform: rotate(-5deg);/* Rotate image back to compensate for parent rotation */
-    z-index: 3;
-    border-radius: 10px;
-    border: 2px dashed rgba(255, 255, 255, 0.319);
-    top: 4em;
 }
 
 .about-img-bg {
+    position: relative;
     height: 40vh;
-    min-width: 80vw;
+    width: 100%;
     margin-left: 1em;
-    border-radius: 40px;
-    background: rgba(201, 140, 220, 0.762);
-
+    border-radius: 7px;
+    background: rgba(201, 140, 220, 0.299);
+    top: 1em;
     /* Credit to https://shadows.brumm.af/ for this layered box shadow  */
     box-shadow:
         1.8px 1.7px 0.4px -10px rgba(0, 0, 0, 0.067),
@@ -54,12 +42,28 @@ CSS HSL
     z-index: 2;
 }
 
+
+.about-img {
+    position: relative;
+    display: block;
+    margin: auto;
+    width: 26em;
+    transform: rotate(-5deg);/* Rotate image back to compensate for parent rotation */
+    z-index: 3;
+    border-radius: 7px;
+    border: 2px solid rgba(255, 255, 255, 0.319);
+    top: 3em;
+}
+
+
+
+
 .about-text-wrapper {
     width: 80vw;
-    height: 100%;
     margin: auto;
+    margin-top: 5em;
+    padding: 1em;
     position: relative;
-    top: 8em;
 }
 
 .about-text {
