--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -9,7 +9,8 @@ CSS HSL
 */
 
 .port-wrapper {
-  min-height: 700px;
+  
+  height: fit-content;
   min-width: 280px;
   max-width: 500px;
   background: rgba(199, 113, 214, 0.402);
