--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ main {
 }
 
 
-Material Icons from goo
+/* Material Icons from google fonts */
 .material-icons.md-48 {
   font-size: 30em;
   color: rgba(248, 245, 42, 0.242);
