--- a/css/projects.css
+++ b/css/projects.css
@@ -6,12 +6,12 @@ CSS HSL
 --purple: rgba(175, 72, 193, 0.815)
 */
 
-.port-wrapper {
+.proj-wrapper {
 
   height: fit-content;
   min-width: 600px;
   max-width: 600px;
-  background: rgba(199, 113, 214, 0.402);
+  background: rgba(148, 33, 168, 0.328);
   border: 1px solid rgb(199, 113, 214);
   margin: 3em 0;
   z-index: 1;
@@ -19,7 +19,7 @@ CSS HSL
   padding: 1.5em;
 }
 
-.port-img {
+.proj-img {
   position: relative;
   display: block;
   margin: auto;
@@ -37,12 +37,12 @@ CSS HSL
   top: 2em;
 }
 
-.port-title {
+.proj-title {
   left: 1.6em;
   top: 1em;
 }
 
-.port-text-wrapper {
+.proj-text-wrapper {
 
   flex-direction: row;
   margin: 1em;
@@ -50,18 +50,18 @@ CSS HSL
   top: 6em;
 }
 
-.port-text {
+.proj-text {
   color: white;
   overflow-wrap: break-word;
   /* https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Text/Wrapping_Text */
 }
 
 @media (max-width:500px) {
-  .port-wrapper {
+  .proj-wrapper {
     margin-top: 5em;
   }
 
-  .port-text-wrapper {
+  .proj-text-wrapper {
     margin-top: 4em;
   }
 }
