--- a/bookshelf2/main2.css
+++ b/bookshelf2/main2.css
@@ -3,37 +3,52 @@
 *::after {
     box-sizing: border-box;
 }
+
 body {
     background-image: url(img/bookshelf-bg.jpg);
     background-repeat: repeat-y;
-    background-size: 300%;
+    background-size: 200rem;
     background-position: -400px;
 }
 
-main {
+.main-wrapper {
     display: flex;
-    justify-content: center;
+    height: 90vh;
+    margin: 4rem;
+    padding: 2rem;
+    border-radius: 1rem;
+    flex-direction: column;
+    justify-content: top;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.796);
 }
 
 .dropzone {
-    background-image: url(img/backpack.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-color:beige;
+    background-color: rgba(245, 245, 220, 0.442);
     background-position: 0 bottom;
-    height: 20rem;
-    width: 20rem;
+    min-height: 20rem;
+    width: 80%;
     border-radius: 1rem;
     padding: 1rem;
     font-size: 1.6rem;
-    
+    text-align: center;
+    font-size: 3rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+
 }
+
+
 
 .bookshelf-element {
     width: 80vw;
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
-    grid-template-columns: 5rem 10rem 10rem 10rem;
+    grid-template-columns: 25% 25% 25% 25% 25;
 }
 
 .book-element {
@@ -72,6 +87,94 @@ main {
 }
 
 .book-text4 {
-    font-size: .8rem;
+    font-size: 1rem;
     font-weight: 200;
+}
+
+
+
+input {
+    font-size: 1.5rem;
+}
+
+button {
+    font-size: 1rem;
+    padding: .5rem;
+    margin: .4rem;
+}
+
+#log {
+    width: 400px;
+    height: 200px;
+    background-color: white;
+    display: none;
+}
+
+.dropdown-wrapper {
+    color: white
+}
+
+.fav {
+    background-color: pink;
+}
+
+
+/* BUTTONS */
+
+.button-56 {
+  align-items: center;
+  background-color: #fee6e3;
+  border: 2px solid #111;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #111;
+  cursor: pointer;
+  display: flex;
+  font-family: Inter,sans-serif;
+  font-size: 16px;
+  height: 48px;
+  justify-content: center;
+  line-height: 24px;
+  max-width: 100%;
+  padding: 0 25px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-56:after {
+  background-color: #111;
+  border-radius: 8px;
+  content: "";
+  display: block;
+  height: 48px;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  top: -2px;
+  transform: translate(8px, 8px);
+  transition: transform .2s ease-out;
+  z-index: -1;
+}
+
+.button-56:hover:after {
+  transform: translate(0, 0);
+}
+
+.button-56:active {
+  background-color: #ffdeda;
+  outline: 0;
+}
+
+.button-56:hover {
+  outline: 0;
+}
+
+@media (min-width: 768px) {
+  .button-56 {
+    padding: 0 40px;
+  }
 }
