--- a/bookshelf2/main2.css
+++ b/bookshelf2/main2.css
@@ -1,4 +1,4 @@
-*,
+/* *,
 *::before,
 *::after {
     box-sizing: border-box;
@@ -116,12 +116,12 @@ button {
 
 .fav {
     background-color: pink;
-}
+} */
 
 
 /* BUTTONS */
 
-.button-56 {
+/* .button-56 {
   align-items: center;
   background-color: #fee6e3;
   border: 2px solid #111;
@@ -177,4 +177,4 @@ button {
   .button-56 {
     padding: 0 40px;
   }
-}
+} */
