--- a/bookshelf/main.css
+++ b/bookshelf/main.css
@@ -1,29 +1,31 @@
-/* *,
+*,
 *::before,
 *::after {
     box-sizing: border-box;
 }
 
 body {
-    background-image: url(img/bookshelf-bg.jpg);
+    /* background-image: url(img/bookshelf-bg.jpg);
     background-repeat: repeat-y;
     background-size: 200rem;
-    background-position: -400px;
+    background-position: -400px; */
+    background-color: rgb(0,159,214);
+    font: bold 1em/100% "Helvetica Neue", Arial, sans-serif;
+    padding: 2em 0;
+    text-align: center;
+    z-index: 1;
 }
 
-.main-wrapper {
+.app {
     display: flex;
-    height: 90vh;
     margin: 4rem;
     padding: 2rem;
     border-radius: 1rem;
     flex-direction: column;
-    justify-content: top;
-    align-items: center;
     background-color: rgba(0, 0, 0, 0.796);
 }
 
-.dropzone {
+/* .dropzone {
     background-color: rgba(245, 245, 220, 0.442);
     background-position: 0 bottom;
     min-height: 20rem;
@@ -38,38 +40,40 @@ body {
     flex-direction: column;
     text-align: center;
 
-}
+} */
 
 
 
-.bookshelf-element {
+
+
+.bookshelf {
     width: 80vw;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    grid-template-columns: 25% 25% 25% 25% 25;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
 }
 
-.book-element {
-    height: 30rem;
-    padding: 10px;
-    margin: 5px;
+.book {
+    min-width: 20rem;
+    max-width: 25rem;
     text-decoration: none;
     line-break: anywhere;
     list-style-type: none;
-    width: 12rem;
+    width: 10;
     border: 4px solid darkolivegreen;
     border-radius: .2rem;
     background-color: burlywood;
-    font-weight: 900;
-    font-size: 15px;
-    line-height: 1.9;
-    overflow: auto;
+    line-height: 1.3;
+    text-align: left;
+    margin: 1rem;
+    padding: 1rem;
+ 
 }
 
-.book-element:hover {
-    background-color: aliceblue;
+.book:hover {
+    background-color: rgb(99, 136, 169);
 }
 
 .book-text1 {
@@ -77,38 +81,35 @@ body {
 }
 
 .book-text2 {
-    font-size: 1rem;
+    font-size: .9rem;
     font-family: 'Courier New', Courier, monospace;
 }
 
 .book-text3 {
-    font-size: .8rem;
-    font-weight: 400;
+    font-size: .9rem;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .book-text4 {
-    font-size: 1rem;
-    font-weight: 200;
+    font-size: .8rem;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 
 
 input {
     font-size: 1.5rem;
+    margin: .5rem;
 }
 
-button {
-    font-size: 1rem;
-    padding: .5rem;
-    margin: .4rem;
+.search-header {
+    font-size: 2rem;
+    margin: auto;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
 }
 
-#log {
-    width: 400px;
-    height: 200px;
-    background-color: white;
-    display: none;
-}
+
 
 .dropdown-wrapper {
     color: white
@@ -116,12 +117,60 @@ button {
 
 .fav {
     background-color: pink;
-} */
+} 
+
+.favorite-books {
+    min-height: 100px;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 3rem;
+
+
+}
+
+.favorite-books-header {
+    font-size: 2rem;
+    text-align: center;
+    margin: 1rem;
+    color: white;
+    background-color: rgba(255, 192, 203, 0.741);
+    text-shadow: 2px 2px 2px black;
+    width: 50vw;
+    margin: auto;
+    border-radius: .5rem;
+ 
+}
+
+.favorite-books-section {
+    border: 1px solid pink;
+}
+
+
+
+.hider {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.546);
+    z-index: 2;
+}
+
+.hidden {
+    display: none;
+}
 
 
 /* BUTTONS */
 
-/* .button-56 {
+button {
   align-items: center;
   background-color: #fee6e3;
   border: 2px solid #111;
@@ -129,7 +178,7 @@ button {
   box-sizing: border-box;
   color: #111;
   cursor: pointer;
-  display: flex;
+  display: inline;
   font-family: Inter,sans-serif;
   font-size: 16px;
   height: 48px;
@@ -143,9 +192,13 @@ button {
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  font-size: 1rem;
+  padding: .5rem;
+ margin: auto;
+
 }
 
-.button-56:after {
+button:after {
   background-color: #111;
   border-radius: 8px;
   content: "";
@@ -160,21 +213,21 @@ button {
   z-index: -1;
 }
 
-.button-56:hover:after {
+button:hover:after {
   transform: translate(0, 0);
 }
 
-.button-56:active {
+button:active {
   background-color: #ffdeda;
   outline: 0;
 }
 
-.button-56:hover {
+button:hover {
   outline: 0;
 }
 
 @media (min-width: 768px) {
-  .button-56 {
+  button {
     padding: 0 40px;
   }
-} */
+} 
