--- a/css/about.css
+++ b/css/about.css
@@ -8,6 +8,9 @@ CSS HSL
 
 
 .about-wrapper {
+
+    margin-top: 5rem;
+    margin-bottom: rem;
     min-height: 40em;
     height: fit-content;
     background: rgba(199, 113, 214, 0.402);
@@ -59,6 +62,7 @@ CSS HSL
 
 .about-text-wrapper {
     width: 80vw;
+    height: 30rem;
     margin: auto;
     margin-top: 5em;
     padding: 1em;
