--- a/bookshelf/main.css
+++ b/bookshelf/main.css
@@ -9,6 +9,7 @@ body {
     background-repeat: repeat-y;
     background-size: 200rem;
     background-position: -400px; */
+    min-width: 300px;
     background-color: rgb(0, 159, 214);
     font: bold 1em/100% "Helvetica Neue", Arial, sans-serif;
     padding: 2em 0;
