--- a/coffee-animation.css
+++ b/coffee-animation.css
@@ -12,7 +12,8 @@
     width: 280px;
     height: 300px;
     margin: auto;
-    background: linear-gradient(to right, #f9f9f9, #d9d9d9);
+    background:linear-gradient(white
+    , grey);
     border-bottom-left-radius: 45%;
     border-bottom-right-radius: 45%;
 }
@@ -27,13 +28,14 @@
     border-radius: 50%;
 }
 
+/* circle is inside surface of cup */
 .circle{
     position: absolute;
     top: 5px;
     left: 10px;
     width: calc(100% - 20px);
     height: 50px;
-    background: linear-gradient(to left, #f9f9f9, #d9d9d9);
+    background: linear-gradient(to right, grey, black);
     border-radius: 50%;
     box-sizing: border-box;
     overflow: hidden;
@@ -45,7 +47,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to right, #C68B59, #864000);
+    background: linear-gradient(to right, #7c4413, #140a00);
     border-radius: 50%;
 
 }
@@ -112,8 +114,8 @@
     left: 50%;
     transform: translateX(-50%);
     border-radius: 50%;
-    background: linear-gradient(to right, #f9f9f9, #e7e7e7);
-    box-shadow: 0 35px 35px rgba(0, 0, 0, 0.2);
+    background: radial-gradient(grey, black);
+    box-shadow: 10px 35px 35px rgba(0, 0, 0, 0.2);
 }
 
 .saucer::before{
@@ -124,7 +126,7 @@
     right: 10px;
     bottom: 10px;
     border-radius: 50%;
-    background: linear-gradient(to right, #f9f9f9, #e7e7e7);
+    background: radial-gradient(rgb(106, 106, 108), black);
 }
 
 .saucer::after{
