--- a/bookshelf/main.css
+++ b/bookshelf/main.css
@@ -18,15 +18,22 @@ body {
     z-index: 1;
 }
 
-.app {
-    display: flex;
-    margin: 4rem;
-    padding: 2rem;
-    border-radius: 1rem;
-    flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.796);
+h1 {
+    font-size: 2em;
+    margin: 0 0 0.3em;
 }
 
+h2 {
+    font-size: 1.5em;
+    margin: 0 0 0.5em;
+}
+
+h3 {
+    font-size: 1.2em;
+    margin: 0 0 0.5em;
+    color: white;
+    margin: 1rem;
+}
 
 
 .bookshelf {
@@ -42,7 +49,7 @@ body {
     min-width: 20rem;
     max-width: 25rem;
     text-decoration: none;
-    line-break: anywhere;
+    line-break: loose;
     list-style-type: none;
     width: 10;
     border: 4px solid darkolivegreen;
