--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,11 @@ body a {
   color: white;
 }
 
+h2 {
+  font-size: 2rem;
+  margin: 1rem 0;
+}
+
 main {
   min-height: 56em;
   height: fit-content;
