--- a/coffee-counter/style.css
+++ b/coffee-counter/style.css
@@ -33,7 +33,7 @@ a {
   width: 100%;
   height: 100vh;
   min-width: 650px;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .column {
@@ -42,29 +42,27 @@ a {
   flex: 1;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-content: flex-start;
 }
 
 .container {
-  width: 100%;
-  height: fit-content;
-  background-color: rgba(0, 0, 0, 0.944);
-} 
-
-.container.left {
   margin-top: 25px;
   margin-left: 5px;
   display: flex;
   flex-direction: column;
+  align-self: flex-start;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   /* background-image: url(bean.png); */
   background-size: 40px;
   background-repeat: repeat;
-
   border: 2px solid rgb(49, 24, 7);
-
+  width: 100%;
+  height: fit-content;
+  background-color: rgba(0, 0, 0, 0.944);
 }
+
+
 
 .bean {
   width: 30px;
@@ -107,6 +105,8 @@ a {
   font-size: 20px;
 }
 
+/* PRODUCER */
+
 #producer_container {
   padding: 10px;
   overflow: auto;
@@ -134,6 +134,12 @@ a {
   font-size: 20px;
 
 }
+
+.price {
+  font-size: 20px;
+}
+
+
 
 #feedback {
   height: 5rem;
